Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27020

examples/qtbase/opengl/samplebuffers doesn't work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0 RC 1
    • 5.0.0 Beta 1, 5.0.0 Beta 2
    • None
    • qt-windows-opensource-5.0.0-beta1-x86-offline.exe (2012-08-25) on Windows 7
    • f813031835748fb1b121c81eab1195847e4ab30a

    Description

      The example shows one correct frame. The next frames are white with a few black and grey pixels at the top of the window. The pixels look like they might belong to some text.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            kkalland Kim Motoyoshi Kalland (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes