Made renderText() work in samplebuffers example.

Since the OpenGL paint engine is now OpenGL 2.0 based, we need to save
and restore all GL state to prevent it from being clobbered.

Task-number: QTBUG-27020
Change-Id: I39831e074aa818583df34c4a88b13be559d0231b
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Mitch Curtis <mitch.curtis@digia.com>
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>

cregit: f813031835748fb1b121c81eab1195847e4ab30a https://github.com/qt/qtbase/commit/f813031835748fb1b121c81eab1195847e4ab30a